assets/queries/cloudFormation/aws/security_groups_with_exhibited_admin_ports/test/positive1.yaml
Resources:
  Positive1_security_group:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: "-1"
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  # Standalone IPv4 ingress rule
  Positive1_ingress_ipv4:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Positive1_security_group
      IpProtocol: tcp
      FromPort: 101       # exposes 115
      ToPort: 120
      CidrIp: 0.0.0.0/0

  # Standalone IPv6 ingress rule
  Positive1_ingress_ipv6:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref Positive1_security_group
      IpProtocol: udp
      FromPort: 2000      #exposes 2049
      ToPort: 2060
      CidrIpv6: ::/0
